hello contact user

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 	<script src="js/libs/jquery-2.1.1.js"></script>
 	<script src="js/baasbox.js"></script>
 	<script src="js/scripts.js"></script>
+	<script src="js/debug.js"></script>
 </body>
 </html>
