--- a/index.html
+++ b/index.html
@@ -9,13 +9,30 @@
 	<meta name="author" content="rc3">
 
 	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap-theme.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/styles-contacts.css">
 </head>
 
 <body>
+	<div class="container">
+		<div class="row head-operations">
+			<div class="col-md-4 logo">Logo</div>
+			<div class="col-md-8">Search</div>
+		</div>
+		<div class="row advance-operations">
+			<div class="col-md-4">Blank</div>
+			<div class="col-md-8">Operations over Contacts</div>
+		</div>
+		<div class="row main-screen">
+			<div class="col-md-4">Future Features</div>
+			<div class="col-md-8">Contacts List</div>
+		</div>
+	</div>
 	
 	<script src="js/libs/jquery-2.1.1.js"></script>
+	<script src="js/libs/bootstrap.js"></script>
 	<script src="js/baasbox.js"></script>
 	<script src="js/scripts.js"></script>
 	<script src="js/debug.js"></script>
