change the "Search" button to an icon
Import bootstrap's icon. and change the search button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<div class="form-group">
 						<input id="search-text" type="text" class="form-control" placeholder="Search">
 					</div>
-					<button id="search" class="btn btn-default">Search</button>
+					<button id="search" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
 					<div class="navbar-form col-md-2" id="account-panel">帳號/登入</div>
 				</div>
 			</div>
