--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
 					</div>
 					<button id="search" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
 					<div class="navbar-form col-md-2" id="account-panel">
+						<!-- Split button -->
+						<div class="btn-group">
+							<button type="button" class="btn btn-default" title=""><span id="account-name"></span></button>
+							<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+								<span class="caret"></span>
+								<span class="sr-only">Toggle Dropdown</span>
+							</button>
+							<ul class="dropdown-menu" role="menu">
+								<li class="divider"></li>
+								<li><a href="#" id="signout">Sign out</a></li>
+							</ul>
+						</div>
 						
 					</div>
 				</div>
