put "add contact" form

--- a/index.html
+++ b/index.html
@@ -80,13 +80,40 @@
 									<h4 class="modal-title" id="myModalLabel">Add a new contact</h4>
 								</div>
 								<div class="modal-body">
-									
-									
-									工號 姓名 分機 Email 手機 生日 住址	
+									<div id="edit-contact-form">
+										<div class="input-group">
+											<label for="cf-id" class="contact-form-label">ID</label>
+											<input type="text" id="cf-id" class="" placeholder="">
+										</div>
+										<div class="input-group">
+											<label for="cf-name" class="contact-form-label">Name</label>
+											<input type="text" id="cf-name" class="" placeholder="">
+										</div>
+										<div class="input-group">
+											<label for="cf-extno" class="contact-form-label">Extension Number</label>
+											<input type="text" id="cf-extno" class="" placeholder="">
+										</div>
+										<div class="input-group">
+											<label for="cf-email" class="contact-form-label">Email</label>
+											<input type="text" id="cf-email" class="" placeholder="">
+										</div>
+										<div class="input-group">
+											<label for="cf-mobileno" class="contact-form-label">Mobile Number</label>
+											<input type="text" id="cf-mobileno" class="" placeholder="">
+										</div>
+										<div class="input-group">
+											<label for="cf-birth" class="contact-form-label">Birthday</label>
+											<input type="text" id="cf-birth" class="" placeholder="">
+										</div>
+										<div class="input-group">
+											<label for="cf-address" class="contact-form-label">Address</label>
+											<input type="text" id="cf-address" class="" placeholder="">
+										</div>
+									</div>
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary">Save changes</button>
+									<button type="button" class="btn btn-primary">Add</button>
 								</div>
 							</div>
 						</div>
