--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<h4 class="modal-title" id="">Add a new contact</h4>
 								</div>
 								<div class="modal-body">
-									<div id="edit-contact-form">
+									<form id="edit-contact-form">
 										<div class="input-group">
 											<label for="cf-id" class="contact-form-label">ID</label>
 											<input type="text" id="cf-id" class="" placeholder="">
@@ -109,7 +109,7 @@
 											<label for="cf-address" class="contact-form-label">Address</label>
 											<input type="text" id="cf-address" class="" placeholder="">
 										</div>
-									</div>
+									</form>
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -191,13 +191,13 @@
 	
 	<script id="contact-tmpl" type="text/template">
 		<div class="row">
-		  <div class="col-xs-1">{{=it.employeeId}}</div>
-		  <div class="col-xs-2">{{=it.name}}</div>
-		  <div class="col-xs-1">{{=it.extNo}}</div>
-		  <div class="col-xs-3">{{=it.email}}</div>
-		  <div class="col-xs-1">{{=it.mobileNo}}</div>
-		  <div class="col-xs-1">{{=it.birthDay}}</div>
-		  <div class="col-xs-3">{{=it.address}}</div>
+		  <div class="col-xs-1">&nbsp;{{=it.employeeId}}</div>
+		  <div class="col-xs-2">&nbsp;{{=it.name}}</div>
+		  <div class="col-xs-1">&nbsp;{{=it.extNo}}</div>
+		  <div class="col-xs-3">&nbsp;{{=it.email}}</div>
+		  <div class="col-xs-1">&nbsp;{{=it.mobileNo}}</div>
+		  <div class="col-xs-1">&nbsp;{{=it.birthDay}}</div>
+		  <div class="col-xs-3">&nbsp;{{=it.address}}</div>
 		</div>
 	</script>
 	
