--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="col-md-10">
 				<div class="well">
 					<!-- add contact button-->
-					<button type="button" id="c-add" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#add-contact-form" title="Add a new contact">
+					<button type="button" id="c-add" class="btn btn-primary btn-sm" title="Add a new contact">
 						<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add
 					</button>
 
@@ -77,7 +77,7 @@
 							<div class="modal-content">
 								<div class="modal-header">
 									<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-									<h4 class="modal-title" id="">Add a new contact</h4>
+									<h4 class="modal-title" id=""></h4>
 								</div>
 								<div class="modal-body">
 									<form id="edit-contact-form">
@@ -113,18 +113,18 @@
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary" id="cf-add">Add</button>
+									<button type="button" class="btn btn-primary" id="cf-save">Save</button>
 								</div>
 							</div>
 						</div>
 					</div>
 					
-					<!-- add contact button-->
+					<!-- patch add contact button-->
 					<button type="button" id="p-c-add" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#p-add-contact-form" title="Patch Add">
 						<span class="glyphicon glyphicon-import" aria-hidden="true"></span> Patch Add
 					</button>
 
-					<!-- add contact form in Modal -->
+					<!-- patch add contact form in Modal -->
 					<div class="modal fade" id="p-add-contact-form" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 						<div class="modal-dialog">
 							<div class="modal-content">
@@ -138,7 +138,7 @@
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary" id="cf-add">Add</button>
+									<button type="button" class="btn btn-primary" id="cf-import">Import</button>
 								</div>
 							</div>
 						</div>
@@ -198,6 +198,37 @@
 		  <div class="col-xs-1">&nbsp;{{=it.mobileNo}}</div>
 		  <div class="col-xs-1">&nbsp;{{=it.birthDay}}</div>
 		  <div class="col-xs-3">&nbsp;{{=it.address}}</div>
+		</div>
+	</script>
+	
+	<script id="contact-form-tmpl" type="text/template">
+		<div class="input-group">
+			<label for="cf-id" class="contact-form-label">ID</label>
+			<input type="text" id="cf-id" class="" placeholder="" value='{{=it.employeeId}}'>
+		</div>
+		<div class="input-group">
+			<label for="cf-name" class="contact-form-label">Name</label>
+			<input type="text" id="cf-name" class="" placeholder="" value='{{=it.name}}'>
+		</div>
+		<div class="input-group">
+			<label for="cf-extno" class="contact-form-label">Extension Number</label>
+			<input type="text" id="cf-extno" class="" placeholder="" value='{{=it.extNo}}'>
+		</div>
+		<div class="input-group">
+			<label for="cf-email" class="contact-form-label">Email</label>
+			<input type="text" id="cf-email" class="" placeholder="" value='{{=it.email}}'>
+		</div>
+		<div class="input-group">
+			<label for="cf-mobileno" class="contact-form-label">Mobile Number</label>
+			<input type="text" id="cf-mobileno" class="" placeholder="" value='{{=it.mobileNo}}'>
+		</div>
+		<div class="input-group">
+			<label for="cf-birth" class="contact-form-label">Birthday</label>
+			<input type="text" id="cf-birth" class="" placeholder="" value='{{=it.birthDay}}'>
+		</div>
+		<div class="input-group">
+			<label for="cf-address" class="contact-form-label">Address</label>
+			<input type="text" id="cf-address" class="" placeholder="" value='{{=it.address}}'>
 		</div>
 	</script>
 	
