working on search condition (not complete)

--- a/index.html
+++ b/index.html
@@ -46,20 +46,17 @@
 		<div class="row advance-operations">
 			<div class="col-md-2">Blank</div>
 			<div class="col-md-10">
-				<div class="navbar-form">
+				<form class="navbar-form" id="contact-filter">
 					<div class="radio">
 						search field
 						<label>
-							<input type="radio" name="optionsRadios" id="filter-all" value="option1" checked> for all
+							<input type="radio" name="optionsRadios" id="filter-name" value="by-name" checked> name
 						</label>
 						<label>
-							<input type="radio" name="optionsRadios" id="filter-name" value="option2"> name
-						</label>
-						<label>
-							<input type="radio" name="optionsRadios" id="filter-dep" value="option3" > department
+							<input type="radio" name="optionsRadios" id="filter-dep" value="by-department"> department
 						</label>
 					</div>
-				</div>
+				</form>
 			</div>
 		</div>
 		<div class="row main-screen">
