--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<div class="container" id="app">
 		<div class="row head-operations">
-			<div class="col-md-2 logo">Logo</div>
+			<div class="col-md-2 logo">{Logo}</div>
 			<div class="col-md-10">
 				<div class="navbar-form">
 					<div class="form-group">
@@ -44,23 +44,26 @@
 			</div>
 		</div>
 		<div class="row advance-operations">
-			<div class="col-md-2">Blank</div>
+			<div class="col-md-2">{Blank}</div>
 			<div class="col-md-10">
 				<form class="navbar-form" id="contact-filter">
 					<div class="radio">
 						search field
 						<label>
-							<input type="radio" name="optionsRadios" id="filter-name" value="by-name" checked> name
+							<input type="radio" name="optionsRadios" value="by-all" checked> all
 						</label>
 						<label>
-							<input type="radio" name="optionsRadios" id="filter-dep" value="by-department"> department
+							<input type="radio" name="optionsRadios" value="by-name"> name
+						</label>
+						<label class="off">
+							<input type="radio" name="optionsRadios" value="by-department"> department
 						</label>
 					</div>
 				</form>
 			</div>
 		</div>
 		<div class="row main-screen">
-			<div class="col-md-2">Future Features</div>
+			<div class="col-md-2">{Future Features}</div>
 			<div class="col-md-10">
 				<div class="well">
 					<!-- add contact button-->
@@ -211,7 +214,7 @@
 		  <div class="col-xs-1">&nbsp;{{=it.mobileNo}}</div>
 		  <div class="col-xs-1">&nbsp;{{=it.birthDay}}</div>
 		  <div class="col-xs-3">&nbsp;{{=it.address}}</div>
-		  <div class="col-xs-1">&nbsp;<span class="glyphicon glyphicon-trash delete-contact" aria-hidden="true" title="delete me" data-dismiss="alert"></span></div>
+		  <div class="col-xs-1">&nbsp;<span class="glyphicon glyphicon-trash delete-contact" aria-hidden="true" title="delete me" data-dismiss="alert" ></span></div>
 		</div>
 	</script>
 	
