add new field "department " to "contacts"

--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
 			<input type="text" id="cf-name" class="" placeholder="" value='{{=it.name}}'>
 		</div>
 		<div class="input-group">
+			<label for="cf-department " class="contact-form-label">Department </label>
+			<input type="text" id="cf-department " class="" placeholder="" value='{{=it.department }}'>
+		</div>
+		<div class="input-group">
 			<label for="cf-extno" class="contact-form-label">Extension Number</label>
 			<input type="text" id="cf-extno" class="" placeholder="" value='{{=it.extNo}}'>
 		</div>
