open feature that search by department

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<label>
 							<input type="radio" name="optionsRadios" value="by-name"> name
 						</label>
-						<label class="off">
+						<label>
 							<input type="radio" name="optionsRadios" value="by-department"> department
 						</label>
 					</div>
@@ -229,7 +229,7 @@
 		</div>
 		<div class="input-group">
 			<label for="cf-department " class="contact-form-label">Department </label>
-			<input type="text" id="cf-department " class="" placeholder="" value='{{=it.department }}'>
+			<input type="text" id="cf-department" class="" placeholder="" value='{{=it.department }}'>
 		</div>
 		<div class="input-group">
 			<label for="cf-extno" class="contact-form-label">Extension Number</label>
