--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<meta name="description" content="The Baas Contacts">
 	<meta name="author" content="rc3">
 
+	<link type="image/x-icon" rel="shortcut icon" href="favicon.ico">
+	<link type="image/x-icon" rel="icon" href="favicon.ico" />
+
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.css">
@@ -207,6 +210,7 @@
 			<strong>Sign in error !</strong> Invalid user account or password. 
 			<a class="todo" href="#"> forgot password ?</a>
 		</div>
+
 	</div>
 </div>
 
