--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<div class="container" id="app">
+<div class="container off" id="app">
 	<div class="row head-operations">
 		<div class="col-md-1 logo">{Logo}</div>
 		<div class="col-md-11">
@@ -191,26 +191,54 @@
 	<span></span>
 </div>
 
-<div class="container" id="signin-form">
-	<div class="form-signin" role="form">
-		<h1 class="form-signin-heading">Sign in</h1>
+<div class="container off" id="signin-form">
+	<div class="form-user" role="form">
+		<h1>Sign in</h1>
 		<h5>Welcome back! Please enter your account and password to proceed.</h5>
-		<label for="inputAccount" class="sr-only">Account</label>
-		<input type="text" id="inputAccount" class="form-control" placeholder="User Account" required autofocus>
-		<label for="inputPassword" class="sr-only">Password</label>
-		<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-		<div class="checkbox todo">
-			<label>
-				<input type="checkbox" value="remember-me"> Remember me
-			</label>
-		</div>
-		<button class="btn btn-lg btn-primary btn-block" id="signin">Sign in</button>
-		<button class="btn btn-lg btn-info btn-block" id="signup">Sign up</button>
-		<div class="alert alert-danger" role="alert" id="signin-error-panel">
+		<form>
+			<label for="inputAccount" class="sr-only">Account</label>
+			<input type="text" id="inputAccount" class="form-control" placeholder="User Account" required autofocus>
+			<label for="inputPassword" class="sr-only">Password</label>
+			<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+			<div class="checkbox todo">
+				<label>
+					<input type="checkbox" value="remember-me"> Remember me
+				</label>
+			</div>
+			<button class="btn btn-lg btn-primary btn-block" id="signin">Sign in</button>
+		</form>
+		<div class="alert alert-danger off" role="alert" id="signin-error-panel">
 			<strong>Sign in error !</strong> Invalid user account or password. 
 			<a class="todo" href="#"> forgot password ?</a>
 		</div>
+		<button class="btn btn-lg btn-info btn-block" id="signup-gate">Sign up</button>
+	</div>
+</div>
 
+<div class="container off" id="signup-form">
+	<div class="form-user" role="form">
+		<h1>Sign up</h1>
+		<strong>Welcome! Choose your account Name</strong>
+		<label for="inputAccount" class="sr-only">Account</label>
+		<input type="text" id="new-account" class="form-control" placeholder="User Account" required autofocus>
+		<strong>Name</strong>
+		<label for="new-account" class="sr-only">Name</label>
+		<input type="text" id="new-name" class="form-control" placeholder="Name" required>
+		<strong>Email</strong>
+		<label for="new-account" class="sr-only">Email</label>
+		<input type="email" id="new-email" class="form-control" placeholder="Email" required>
+		<strong>Create a password</strong>
+		<label for="new-password" class="sr-only">Password</label>
+		<input type="password" id="new-password" class="form-control" placeholder="Password" required>
+		<strong>Confirm your password</strong>
+		<label for="re-password" class="sr-only">Password</label>
+		<input type="password" id="re-password" class="form-control" placeholder="Re-Enter Password" required>
+		
+		<button class="btn btn-lg btn-info btn-block" id="signup">Sign up</button>
+		<div class="alert alert-danger off" role="alert" id="signup-error-panel">
+			
+		</div>
+		<button class="btn btn-lg btn-primary btn-block" id="signin-gate">Sign in</button>
 	</div>
 </div>
 
