--- a/index.html
+++ b/index.html
@@ -221,23 +221,21 @@
 		<strong>Welcome! Choose your account Name</strong>
 		<label for="inputAccount" class="sr-only">Account</label>
 		<input type="text" id="new-account" class="form-control" placeholder="User Account" required autofocus>
+		<strong>Create a password</strong>
+		<label for="new-password" class="sr-only">Password</label>
+		<input type="password" id="new-password" class="form-control" placeholder="Password" required>
+		<strong>Confirm your password</strong>
+		<label for="re-password" class="sr-only">Password</label>
+		<input type="password" id="re-password" class="form-control" placeholder="Re-enter Password" required>
 		<strong>Name</strong>
 		<label for="new-account" class="sr-only">Name</label>
 		<input type="text" id="new-name" class="form-control" placeholder="Name" required>
 		<strong>Email</strong>
 		<label for="new-account" class="sr-only">Email</label>
 		<input type="email" id="new-email" class="form-control" placeholder="Email" required>
-		<strong>Create a password</strong>
-		<label for="new-password" class="sr-only">Password</label>
-		<input type="password" id="new-password" class="form-control" placeholder="Password" required>
-		<strong>Confirm your password</strong>
-		<label for="re-password" class="sr-only">Password</label>
-		<input type="password" id="re-password" class="form-control" placeholder="Re-Enter Password" required>
 		
 		<button class="btn btn-lg btn-info btn-block" id="signup">Sign up</button>
-		<div class="alert alert-danger off" role="alert" id="signup-error-panel">
-			
-		</div>
+		<div class="alert alert-danger off" role="alert" id="signup-error-panel"></div>
 		<button class="btn btn-lg btn-primary btn-block" id="signin-gate">Sign in</button>
 	</div>
 </div>
