--- a/index.html
+++ b/index.html
@@ -209,7 +209,26 @@
 		</form>
 		<div class="alert alert-danger off" role="alert" id="signin-error-panel">
 			<strong>Sign in error !</strong> Invalid user account or password. 
-			<a class="todo" href="#"> forgot password ?</a>
+			<a id="forgot-password" href="#"> forgot password ?</a>
+		</div>
+		<div id="reset-password-confirm" class="modal fade" tabindex="-1" role="dialog">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+						<h4 class="modal-title" id="">Forgot password ?</h4>
+					</div>
+					<div class="modal-body">
+						Send password reset mail to 
+						<input type="text" id="reset-password-account">
+						&#39;s email?
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-primary" id="reset-password">Send</button>
+					</div>
+				</div>
+			</div>
 		</div>
 		<button class="btn btn-lg btn-info btn-block" id="signup-gate">Sign up</button>
 	</div>
@@ -233,7 +252,7 @@
 		<strong>Email</strong>
 		<label for="new-account" class="sr-only">Email</label>
 		<input type="email" id="new-email" class="form-control" placeholder="Email" required>
-		
+
 		<button class="btn btn-lg btn-info btn-block" id="signup">Sign up</button>
 		<div class="alert alert-danger off" role="alert" id="signup-error-panel"></div>
 		<button class="btn btn-lg btn-primary btn-block" id="signin-gate">Sign in</button>
