--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 				<div class="radio">
 					Search field:
 					<label>
-						<input type="radio" name="optionsRadios" value="by-all" checked> all
+						<input type="radio" name="optionsRadios" value="by-all" checked> All
 					</label>
 					<label>
-						<input type="radio" name="optionsRadios" value="by-name"> name
+						<input type="radio" name="optionsRadios" value="by-name"> Name
 					</label>
 					<label>
-						<input type="radio" name="optionsRadios" value="by-department"> department
+						<input type="radio" name="optionsRadios" value="by-department"> Department
 					</label>
 				</div>
 			</form>
