--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="col-md-11">
 			<form class="navbar-form" id="contact-filter">
 				<div class="radio">
-					Search field:
+					Search Field:
 					<label>
 						<input type="radio" name="optionsRadios" value="by-all" checked> All
 					</label>
