--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</button>
 						<ul class="dropdown-menu" role="menu">
 							<li class="divider"></li>
-							<li><a href="#" id="signout">Sign out</a></li>
+							<li><a href="#" id="signout">Sign Out</a></li>
 						</ul>
 					</div>
 						
