add View.Modes, a statemachine for switch view mode.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<div class="container off" id="app">
+<div class="container off" id="app-contacts">
 	<div class="row head-operations">
 		<div class="col-md-1 logo">{Logo}</div>
 		<div class="col-md-11">
@@ -313,8 +313,10 @@
 <script src="js/libs/bootstrap.js"></script>
 <script src="js/libs/doT.js"></script>
 <script src="js/baasbox.js"></script>
+<script src="js/extends.jquery.js"></script>
 <script src="js/scripts.js"></script>
 <script src="js/users.js"></script>
+<script src="js/profile.js"></script>
 <script src="js/debug.js"></script>
 
 <link href="js/libs/codemirror/lib/codemirror.css" rel="stylesheet">
