fixes search, and prepare to bind user

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 						<span class="glyphicon glyphicon-share" aria-hidden="true"></span> Publish Contacts (Dev
 					</button>
 
-					<div class="contacts-search">
+					<div id="contacts-search-panel">
 						<div class="form-group">
 							<input id="search-contacts-text" type="text" class="form-control" placeholder="Search">
 						</div>
