add "register then create new contact"

--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
 <script src="js/scripts.js"></script>
 <script src="js/users.js"></script>
 <script src="js/profile.js"></script>
+<script src="js/contacts.js"></script>
 <script src="js/debug.js"></script>
 
 <link href="js/libs/codemirror/lib/codemirror.css" rel="stylesheet">
